syntax = "proto3";

package pixkey;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message PixKeyCreateRequest {
    string kind = 1;
    string key = 2;
    string account_id = 3;
}

message PixKeyFindRequest {
    string kind = 1;
    string key = 2;
}

message Account {
    string account_id = 1;
    string account_number = 2;
    string bank_id = 3;
    string bank_name = 4;
    string owner_name = 5;
    google.protobuf.Timestamp created_at = 6;
}

message PixKeyResponse {
    string id = 1;
    string kind = 2;
    string key = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
    string account_id = 6;
    string status = 7;
}

message PixKeyCreatedResult {
    string id = 1;
    string status = 2;
    string error = 3;
}

service PixService {
    rpc RegisterPixKey(PixKeyCreateRequest) returns (PixKeyCreatedResult) {};
    rpc find(PixKeyFindRequest) returns (PixKeyResponse) {};
}